--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/testing": "^11.0.0",
     "@nx/eslint": "21.6.3",
     "@nx/eslint-plugin": "21.6.3",
+    "@nx/jest": "21.6.3",
     "@nx/js": "^21.6.3",
     "@nx/nest": "^21.6.3",
     "@nx/node": "21.6.3",
@@ -44,6 +45,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/bcrypt": "^6.0.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.7.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/react": "19.0.0",
@@ -52,11 +54,16 @@
     "@vitest/ui": "^3.0.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "jest": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
+    "jest-util": "^30.0.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.6.3",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.40.0",
