--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "shared": ["libs/shared/src/index.ts"]
+      "shared": ["libs/shared/src/index.ts"],
+      "shared-auth": ["libs/shared-auth/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
